--- a/blujay/src/index.html
+++ b/blujay/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="blujay.png">
+  <link rel="icon" type="image/x-icon" href="blujay.PNG">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
