--- a/blujay/src/index.html
+++ b/blujay/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="blujay.PNG">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/@creativebulma/bulma-badge">
 </head>
 <body>
   <app-root></app-root>
