--- a/blujay/src/index.html
+++ b/blujay/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="blujay.PNG">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/@creativebulma/bulma-badge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
