--- a/blujay/src/index.html
+++ b/blujay/src/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/@creativebulma/bulma-badge">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
   <app-root></app-root>
